--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,7 @@ body {
   font-family: var(--font-body);
   font-size: var(--fontSize-1);
   background-color: var(--color-bg);
+  transition: 'color 0.2s ease-out, background 0.2s ease-out';
 }
 
 footer {
