--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@
   --fontSize-4: 1.728rem;
   --fontSize-5: 2.074rem;
   --fontSize-6: 2.488rem;
-  --fontSize-7: 2.986rem;
+  --fontSize-7: 2.488rem;
   
 }
 
@@ -79,7 +79,7 @@ body {
   --color-heading: #1a202c;
   --color-heading-main: black;
   --color-accent: #d1dce5;
-  --color-bg: #fff;
+  --bg: #fff;
   --color-icon-filter: invert(0);
 }
 
@@ -89,7 +89,7 @@ body.dark {
   --color-text-light: #e3e3e3;
   --color-heading: #e3e3e3;
   --color-heading-main: #fff;
-  --color-bg: #282c35;
+  --bg: #282c35;
   --color-icon-filter: invert(100%) brightness(200%);
 }
 
@@ -97,8 +97,8 @@ body {
   color: var(--color-text);
   font-family: var(--font-body);
   font-size: var(--fontSize-1);
-  background-color: var(--color-bg);
-  transition: 'color 0.2s ease-out, background 0.2s ease-out';
+  background: var(--bg);
+  transition: background 0.2s ease-in, color 0.2s ease-in;
 }
 
 footer {
@@ -133,12 +133,14 @@ h5,
 h6 {
   font-weight: var(--fontWeight-bold);
   color: var(--color-heading);
+  transition: color 0.2s ease-in;
 }
 
 h1 {
   font-weight: var(--fontWeight-black);
   font-size: var(--fontSize-6);
   color: var(--color-heading-main);
+  transition: color 0.2s ease-in;
 }
 
 h2 {
@@ -362,6 +364,7 @@ a:focus {
 
 .social-icon {
   filter: var(--color-icon-filter);
+  transition: filter 0.2s ease-in;
 }
 
 .social-icon:hover {
