--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,7 @@ body.dark {
   --color-text-light: #e3e3e3;
   --color-heading: #e3e3e3;
   --color-heading-main: #fff;
-  --bg: #282c35;
+  --bg: #1a1a1a;
   --color-icon-filter: invert(100%) brightness(200%);
 }
 
