--- a/src/style.css
+++ b/src/style.css
@@ -293,6 +293,7 @@ a:focus {
 
 .post-list-item h2 {
   font-size: var(--fontSize-4);
+  font-weight: 900;
   color: var(--color-primary);
   margin-bottom: var(--spacing-2);
   margin-top: var(--spacing-0);
