add scroll spy to the table of contents

--- a/src/style.css
+++ b/src/style.css
@@ -417,6 +417,14 @@ a:focus {
   margin-left: var(--spacing-10);
 }
 
+.active {
+  font-weight: var(--fontWeight-extrabold);
+}
+
+.md-header-a {
+  fill: var(--color-text)
+}
+
 /* Toggle */
 .react-toggle {
   touch-action: pan-x;
