--- a/src/style.css
+++ b/src/style.css
@@ -382,6 +382,7 @@ a:focus {
     position: sticky;
     margin-right: -30vw;
     padding-left: var(--spacing-32);
+    margin-top: -15px;
   }
 }
 
@@ -391,10 +392,11 @@ a:focus {
     position: sticky;
     margin-right: -30vw;
     padding-left: var(--spacing-24);
+    margin-top: -15px;
   }
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 1100px) {
   .table-of-contents {
     display: none;
   }
