--- a/src/style.css
+++ b/src/style.css
@@ -396,7 +396,17 @@ a:focus {
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1199px) {
+  .table-of-contents {
+    top: 100px;
+    position: sticky;
+    margin-right: -19vw;
+    padding-left: var(--spacing-12);
+    margin-top: -15px;
+  }
+}
+
+@media (max-width: 1025px) {
   .table-of-contents {
     display: none;
   }
