--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,7 @@ html {
 }
 
 body {
-  --color-primary: #20a577;
+  --color-primary: #a64765;
   --color-text: #2e353f;
   --color-text-light: #4f5969;
   --color-heading: #1a202c;
@@ -86,12 +86,12 @@ body {
 }
 
 body.dark {
-  --color-primary: #2bbc8a;
-  --color-text: #fff;
+  --color-primary: #ff7aa2;
+  --color-text: #c9d1d9;
   --color-text-light: #e3e3e3;
   --color-heading: #e3e3e3;
-  --color-heading-main: #fff;
-  --bg: #1a1a1a;
+  --color-heading-main: #e3e3e3;
+  --bg: #0d1117;
   --color-icon-filter: invert(100%) brightness(200%);
 }
 
