--- a/src/style.css
+++ b/src/style.css
@@ -373,7 +373,7 @@ a:focus {
 }
 
 .social-icon:hover {
-  filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(288deg) brightness(119%) contrast(119%);
+  filter: invert(42%) sepia(93%) saturate(100%) hue-rotate(305deg) brightness(119%) contrast(142%)
 }
 
 @media (min-width: 1500px) {
