update dark background

--- a/src/style.css
+++ b/src/style.css
@@ -91,7 +91,7 @@ body.dark {
   --color-text-light: #e3e3e3;
   --color-heading: #e3e3e3;
   --color-heading-main: #e3e3e3;
-  --bg: #0d1117;
+  --bg: #0e1117;
   --color-icon-filter: invert(100%) brightness(200%);
 }
 
