--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@
   --fontSize-5: 2.074rem;
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.488rem;
-  
+  --color-primary-theme: #ff7aa2;
 }
 
 /* HTML elements */
@@ -75,7 +75,8 @@ html {
 }
 
 body {
-  --color-primary: #a64765;
+  --color-primary: #000;
+  --color-alt: var(--color-primary-theme);
   --color-text: #2e353f;
   --color-text-light: #4f5969;
   --color-heading: #1a202c;
@@ -86,7 +87,8 @@ body {
 }
 
 body.dark {
-  --color-primary: #ff7aa2;
+  --color-primary: var(--color-primary-theme);
+  --color-alt: #e3e3e3;
   --color-text: #c9d1d9;
   --color-text-light: #e3e3e3;
   --color-heading: #e3e3e3;
@@ -308,7 +310,7 @@ a:focus {
 }
 
 .post-list-item h2:hover {
-  color: var(--color-text)
+  color: var(--color-alt)
 }
 
 .post-list-item header {
@@ -320,6 +322,7 @@ a:focus {
   font-family: var(--font-heading);
   text-decoration: none;
   font-size: var(--fontSize-3);
+  color: var(--color-primary-theme);
 }
 
 .bio {
