--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,7 @@ body {
   --color-text: #2e353f;
   --color-text-light: #4f5969;
   --color-text-dark: #f5f5f5;
+  --color-progress: rgb(161, 165, 176);
   --color-heading: #1a202c;
   --color-heading-main: black;
   --color-accent: #d1dce5;
@@ -95,6 +96,7 @@ body.dark {
   --color-text: #c9d1d9;
   --color-text-light: #e3e3e3;
   --color-text-dark: #292929;
+  --color-progress: rgb(98, 98, 109);
   --color-heading: #e3e3e3;
   --color-heading-main: #e3e3e3;
   --bg: #0e1117;
@@ -319,6 +321,19 @@ a:focus {
   margin: auto;
 }
 
+.topbar-container {
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  top: 0;
+  left: 0; 
+}
+
+.topbar {
+  height: 6px;
+  background-color: var(--color-primary-theme);
+}
+
 .leftNav {
   opacity: 0;
 }
@@ -484,9 +499,9 @@ progress::-webkit-progress-bar {background-color: var(--color-text-dark); width:
 progress {background-color: var(--color-text-dark);}
 
 /* value: */
-progress::-webkit-progress-value {background-color: var(--color-primary-theme) !important;}
-progress::-moz-progress-bar {background-color: var(--color-primary-theme) !important;}
-progress {color: var(--color-primary-theme);}
+progress::-webkit-progress-value {background-color: var(--color-progress) !important;}
+progress::-moz-progress-bar {background-color: var(--color-progress) !important;}
+progress {color: var(--color-progress);}
 
 .toc-header {
   font-weight: var(--fontWeight-light);
@@ -495,6 +510,10 @@ progress {color: var(--color-primary-theme);}
 .toc-a {
   text-decoration: none;
   line-height: var(--lineHeight-tight);
+  color: var(--color-text);
+  font-family: var(--fontFamily-serif);
+  font-size: 14px;
+  font-weight: var(--fontWeight-semibold);
 }
 
 .toc-a:hover {
@@ -509,6 +528,7 @@ progress {color: var(--color-primary-theme);}
 
 .active {
   font-weight: var(--fontWeight-bold);
+  color: var(--color-primary-theme);
 }
 
 .md-header-a {
