--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,8 @@
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
     Times, serif;
-  --font-body: var(--fontFamily-serif);
+  --fontFamily-title: "monofett", var(--fontFamily-sans);
+  --font-body: var(--fontFamily-sans);
   --font-heading: var(--fontFamily-sans);
   --fontWeight-light: 100;
   --fontWeight-normal: 400;
@@ -95,7 +96,7 @@ body {
 }
 
 body.dark {
-  --color-primary: var(--color-primary-theme);
+  --color-primary: #e3e3e3;
   --color-alt: #e3e3e3;
   --color-text: #c9d1d9;
   --color-text-light: #e3e3e3;
@@ -182,6 +183,8 @@ h6 {
 h1 > a {
   color: inherit;
   text-decoration: none;
+  font-family: var(--fontFamily-title);
+  font-size: 4.5rem;
 }
 
 h2 > a,
@@ -319,7 +322,7 @@ a:focus {
 
 .global-header[data-is-root-path="false"] {
   position: sticky;
-  font-size: var(--fontSize-3);
+  font-size: var(--fontSize-5);
   top: -1px;
   padding: 1rem 0;
   background: var(--bg);
@@ -331,7 +334,7 @@ a:focus {
 
 /* styles for when the header is in sticky mode */
 .global-header.isSticky{
-  font-size: var(--fontSize-1);
+  font-size: var(--fontSize-3);
   opacity: .88;
   backdrop-filter: blur(6px);
   box-shadow: var(--box-shadow);
@@ -407,7 +410,7 @@ a:focus {
 }
 
 .post-list-item h2:hover {
-  color: var(--color-alt)
+  color: var(--color-primary-theme);
 }
 
 .post-list-item header {
@@ -416,9 +419,10 @@ a:focus {
 
 .header-link-home {
   font-weight: var(--fontWeight-black);
-  font-family: var(--font-heading);
+  font-family: var(--fontFamily-title);
   text-decoration: none;
-  color: var(--color-primary-theme);
+  /* color: var(--color-primary-theme); */
+  
 }
 
 .bio {
@@ -488,7 +492,7 @@ a:focus {
 
 @media (max-width: 849px) {
   .progress-bar {
-    top: 55px;
+    top: 64px;
     position: fixed;
     z-index: 999;
   }
