--- a/src/style.css
+++ b/src/style.css
@@ -121,6 +121,7 @@ body {
 
 footer {
   padding: var(--spacing-6) var(--spacing-0);
+  font-size: var(--fontSize-0);
 }
 
 hr {
@@ -183,8 +184,6 @@ h6 {
 h1 > a {
   color: inherit;
   text-decoration: none;
-  font-family: var(--fontFamily-title);
-  font-size: 4.5rem;
 }
 
 h2 > a,
@@ -303,8 +302,27 @@ a:focus {
 .footer-wrapper {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-5) var(--spacing-0);
-  font-size: var(--fontSize-1);
+}
+
+
+@media (min-width: 1050px) {
+  .footer-wrapper[data-is-root-path="false"] {
+    padding: var(--spacing-5) var(--spacing-0);
+  }
+
+  .footer-wrapper > ul {
+    padding: 0 0 20px 0; 
+  }
+}
+
+@media (max-width: 1049px) {
+  .footer-wrapper[data-is-root-path="false"] {
+    padding: var(--spacing-5) var(--spacing-5);
+  }
+
+  .footer-wrapper > ul {
+    padding: 0 0 20px var(--spacing-5); 
+  }
 }
 
 .global-wrapper[data-is-root-path="false"] {
@@ -382,8 +400,26 @@ a:focus {
 }
 
 .main-heading {
-  font-size: var(--fontSize-7);
+  font-family: var(--fontFamily-title);
   margin: 0;
+}
+
+@media (min-width: 600px) {
+  .main-heading {
+    font-size: 4.6rem;
+  }
+}
+
+@media (max-width: 599px) {
+  .main-heading {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 499px) {
+  .main-heading {
+    font-size: var(--fontSize-5);
+  }
 }
 
 .article {
