--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,7 @@ body {
   --selection-color: var(--color-primary-theme);
   --box-shadow: 0 5px 20px -20px rgba(0,0,0,0.7);
   --text-shadow: 2px 3px #0000002b;
+  --color-opp: #000;
 }
 
 body.dark {
@@ -111,6 +112,7 @@ body.dark {
   --selection-color: var(--color-primary-theme);
   --box-shadow: 0 20px 20px -20px #000;
   --text-shadow: 2px 3px #ffffff47;
+  --color-opp: #fff;
 }
 
  
@@ -638,4 +640,13 @@ progress {background-color: var(--color-text-dark);}
 .active {
   font-weight: var(--fontWeight-bold);
   color: var(--color-alt);
+}
+
+::selection {
+  background: rgba(238,174,202,.5);
+  color: var(--color-opp);
+}
+::-moz-selection {
+  background: rgba(238,174,202,.5);
+  color: var(--color-opp);
 }
