--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,7 @@ body.dark {
   --color-progress: rgb(98, 98, 109);
   --color-heading: #e3e3e3;
   --color-heading-main: #e3e3e3;
-  --bg: #0e1117;
+  --bg: #000;
   --color-icon-filter: invert(100%) brightness(200%);
   --selection-bg: rgba(49, 100, 220, .3);
   --selection-color: var(--color-primary-theme);
@@ -240,7 +240,7 @@ p {
   font-size: var(--fontSize-1);
 }
 
-.icon-link::before {
+h2 .icon-link::before {
   content: '# ';
 }
 
@@ -639,7 +639,15 @@ progress {background-color: var(--color-text-dark);}
 
 .active {
   font-weight: var(--fontWeight-bold);
-  color: var(--color-alt);
+}
+
+.active > li {
+  background: rgba(49,100,220,1);
+  background: linear-gradient(90deg, rgba(49,100,220,1) 0%, rgba(238,174,202,1) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px #00000000;
 }
 
 ::selection {
