--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,7 @@
   --fontSize-5: 2.074rem;
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.488rem;
+  --fontSize-10: 2.8rem;
   --fontSize-oversized: 4rem;
   /* #3164dc */
 }
@@ -580,8 +581,6 @@ a:focus {
   margin-bottom: var(--spacing-8);
 }
 
-/* Media queries */
-
 @media (max-width: 42rem) {
   blockquote {
     padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
@@ -590,6 +589,9 @@ a:focus {
   ul,
   ol {
     list-style-position: inside;
+  }
+  .blog-post header h1 {
+    font-size: var(--fontSize-10);
   }
 }
 
@@ -612,7 +614,7 @@ a:focus {
 
 @media (max-width: 849px) {
   .progress-bar {
-    top: 6px;
+    top: 0;
     position: fixed;
     z-index: 999;
     height: 5px;
