--- a/styles/style.css
+++ b/styles/style.css
@@ -84,12 +84,12 @@ body {
   --color-alt: var(--color-primary-theme);
   --color-text: #2e353f;
   --color-text-light: #4f5969;
-  --color-text-dark: #f5f5f5;
+  --color-text-dark: rgb(223, 221, 218);
   --color-progress: rgb(161, 165, 176);
   --color-heading: #1a202c;
   --color-heading-main: black;
   --color-accent: #d1dce5;
-  --bg: #fff;
+  --bg: #fbfbfd;
   --color-icon-filter: invert(0);
   --selection-bg: rgba(49, 100, 220, .3);
   --selection-color: var(--color-primary-theme);
@@ -218,22 +218,13 @@ li > a {
 }
 
 .post-link:hover h2 {
-  background: var(--color-primary-theme);
-  background: linear-gradient(90deg, var(--color-primary-theme) 0%, var(--color-secondary-theme) 50%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: 0px 0px #00000000;
+  -webkit-text-stroke: 2px var(--color-text);
+  color: var(--bg);
 }
 
-.post-link:hover .text-small {
-  background: var(--color-primary-theme);
-  background: linear-gradient(90deg, var(--color-primary-theme) 0%, var(--color-secondary-theme) 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: 0px 0px #00000000;
-}
+/* .post-link:hover .text-small {
+  text-decoration: underline;
+} */
 
 .post-link:hover .text-small::after {
   content: " →";
@@ -258,11 +249,8 @@ h3 > a:hover,
 h4 > a:hover,
 h5 > a:hover,
 h6 > a:hover {
-  background: var(--color-secondary-theme);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: 0px 0px #00000000;
+  -webkit-text-stroke: 2px var(--color-primary-theme);
+  color: var(--bg);
 }
 
 /* Prose */
@@ -436,6 +424,7 @@ a:focus {
   opacity: .88;
   backdrop-filter: blur(6px);
   box-shadow: var(--box-shadow);
+  transition: .5s;
 }
 
 .body-wrapper {
@@ -450,12 +439,12 @@ a:focus {
   z-index: 999;
   top: 0;
   left: 0;
+  display: none;
 }
 
 .topbar {
   height: 6px;
   background: var(--color-primary-theme);
-  background: linear-gradient(90deg, var(--color-primary-theme) 0%, var(--color-secondary-theme) 100%);
 }
 
 .leftNav {
@@ -483,12 +472,13 @@ a:focus {
 .main-heading {
   font-family: var(--fontFamily-title);
   margin: 0;
-  background: var(--color-primary-theme);
+  color: var(--color-primary-theme);
+  /* background: var(--color-primary-theme);
   background: linear-gradient(90deg, var(--color-primary-theme) 0%, var(--color-secondary-theme) 50%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  text-shadow: 0px 0px #00000000;
+  text-shadow: 0px 0px #00000000; */
 }
 
 @media (min-width: 700px) {
@@ -541,7 +531,6 @@ a:focus {
   font-family: var(--fontFamily-title);
   text-decoration: none;
   color: var(--color-primary-theme);
-  
 }
 
 .bio {
@@ -564,13 +553,16 @@ a:focus {
 
 .blog-post header h1 {
   margin: 8rem var(--spacing-0) var(--spacing-2) var(--spacing-0);
-  background: var(--color-primary-theme);
+  /* background: var(--color-primary-theme);
   background: linear-gradient(90deg, var(--color-primary-theme) 0%, var(--color-secondary-theme) 50%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  text-shadow: 0px 0px #00000000;
+  text-shadow: 0px 0px #00000000; */
+  -webkit-text-stroke: 1px var(--color-text);
   font-size: var(--fontSize-oversized);
+  color: var(--bg);
+  transition: 0.2s;
 }
 
 .blog-post header p {
@@ -620,10 +612,11 @@ a:focus {
 
 @media (max-width: 849px) {
   .progress-bar {
-    top: 0;
+    top: 6px;
     position: fixed;
     z-index: 999;
     height: 5px;
+    transition: 0.2s;
   }
 
   progress::-webkit-progress-value {background-color: var(--color-text) !important;}
